<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_8"
    android:layout_marginEnd="@dimen/dp_8"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:layout_marginTop="@dimen/dp_8"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFromDateHeader"
            style="@style/small_txt_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_from_date" />

        <RelativeLayout
            android:id="@+id/layout_startDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/spinner_border">
            <TextView
                android:id="@+id/tvSelectStartDate"
                style="@style/large_txt_dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dash" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvToDateHeader"
            style="@style/small_txt_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_to_date" />

        <RelativeLayout
            android:id="@+id/layout_endDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/spinner_border">
            <TextView
                android:id="@+id/tvSelectEndDate"
                style="@style/large_txt_dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dash" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>