<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:behavior_draggable="false"
    app:behavior_hideable="false"
    app:behavior_peekHeight="150dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_16">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:padding="6dip">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/icon_profile"
                android:layout_width="@dimen/medium_icon_width"
                android:layout_height="@dimen/medium_icon_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:civ_fill_color="@color/appBg"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_person_outline" />


            <TextView
                android:id="@+id/txtCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_toEndOf="@+id/icon_profile"
                android:layout_toStartOf="@+id/txt_verification"
                android:gravity="center_vertical"
                android:minHeight="30dp"
                android:text="@string/dash"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <TextView
                android:id="@+id/txt_verification"
                style="@style/small_txt_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_toStartOf="@+id/imv_verification_status"
                android:text="@string/str_verified_address" />


            <ImageView
                android:src="@drawable/ic_verified"
                android:id="@+id/imv_verification_status"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_alignParentEnd="true"
                android:layout_width="@dimen/small_icon_width"
                android:layout_height="@dimen/small_header_height"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_view_customer_address"
                style="@style/small_txt_thin"
                android:text="@string/dash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="@dimen/sp_14"
                android:layout_below="@id/txtCustomerName"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_toEndOf="@+id/icon_profile" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_customer_address"
                android:layout_marginTop="@dimen/dp_16">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCall"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_weight="1"
                    android:text="@string/str_call"
                    android:backgroundTint="@color/appBg"
                    android:textAllCaps="false" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCheckin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_weight="1"
                    android:text="@string/str_check_in"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_arrow_forward"
                    app:iconGravity="textEnd" />

            </LinearLayout>


        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>
</LinearLayout>